--- a/app/views/mentions/show.html.haml
+++ b/app/views/mentions/show.html.haml
@@ -1,5 +1,8 @@
 %h1= @mention.title
 %p= @mention.description
+%p 
+Submited by 
+= @mention.user.email
 
 = link_to "Back", root_path
 = link_to "Edit", edit_mention_path
