--- a/app/views/mentions/index.html.haml
+++ b/app/views/mentions/index.html.haml
@@ -1,3 +1,9 @@
-- @mention.each do |mention|
-	= link_to (image_tag mention.image.url(:medium)), mention
-	%h2= link_to mention.title, mention
+#mentions.transitions-enabled
+	- @mention.each do |mention|
+		.box.panel.panel-default
+			= link_to (image_tag mention.image.url), mention
+			.panel-body
+				%h2= link_to mention.title, mention
+				%p.user
+				Submitted by
+				= mention.user.email
