--- a/app/views/mentions/show.html.haml
+++ b/app/views/mentions/show.html.haml
@@ -1,10 +1,21 @@
-= image_tag @mention.image.url(:medium)
-%h1= @mention.title
-%p= @mention.description
-%p 
-Submited by 
-= @mention.user.email
-
-= link_to "Back", root_path
-= link_to "Edit", edit_mention_path
-= link_to "Delete", mention_path, method: :delete, data: { confirm:"Are you sure?"}
+#mention_show.row
+	.col-md-8.col-mdoffset-2
+		.panel.panel-default
+			.panel-heading.pin_image
+				= image_tag @mention.image.url
+			.panel-body
+				%h1= @mention.title
+				%p= @mention.description
+				%p 
+				Submited by 
+				= @mention.user.email
+			.panel-footer
+				.row
+					.col-md-6
+						%p.user
+						Submitted by
+						= @mention.user.email
+					.col-md-6
+						.btn-group.pull-right
+							= link_to "Edit", edit_mention_path, class: "btn btn-default"
+							= link_to "Delete", mention_path, method: :delete, data: { confirm:"Are you sure?"}, class: "btn btn-default"
