--- a/app/views/mentions/edit.html.haml
+++ b/app/views/mentions/edit.html.haml
@@ -1,5 +1,11 @@
 .col-md-6.col-md-offset-3
-	%h1 Edit Pin
-	= image_tag @mention.image.url(:medium)
-	= render 'form'
-	= link_to "Cancel", mention_path
+	.row
+		.panel.panel-default
+			.panel-heading
+				%h1 New Mention
+			.panel-body
+				%strong.center Current Image
+				%br/
+				= image_tag @mention.image.url(:medium)
+				%br/
+				= render 'form'
