--- a/app/views/mentions/show.html.haml
+++ b/app/views/mentions/show.html.haml
@@ -20,5 +20,6 @@
 							= link_to like_mention_path(@mention), method: :put, class: "btn btn-default" do
 								%span.glyphicon.glyphicon-heart
 									= @mention.get_upvotes.size
-							= link_to "Edit", edit_mention_path, class: "btn btn-default"
-							= link_to "Delete", mention_path, method: :delete, data: { confirm:"Are you sure?"}, class: "btn btn-default"
+							- if user_signed_in?
+								= link_to "Edit", edit_mention_path, class: "btn btn-default"
+								= link_to "Delete", mention_path, method: :delete, data: { confirm:"Are you sure?"}, class: "btn btn-default"
