Install Bower and Isotope

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,11 +8,14 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand= link_to "Mentioned In", root_path
+			.navbar-brand= link_to image_tag( 'Mentioned.In-Logo.png'), root_path
+			<!--.navbar-brand= link_to "Mentioned In", root_path-->
 
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
 					%li= link_to "New Mention", new_mention_path
+					%li= link_to "My Mentions", root_path
+					
 					%li= link_to "Account", edit_user_registration_path
 					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
 
