--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,7 @@ nav {
 				text-decoration: none;
 			}
 		}
+		height: 75px;
 	}
 }
 
@@ -43,13 +44,14 @@ nav {
   width: 100%;
   .box {
 	  margin: 10px;
-	  width: 350px;
-	  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
-	  border-radius: 7px;
+	  padding: 10px;
+	  height: 55px;
+	  /*box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+	  border-radius: 7px;*/
 	  text-align: center;
 	  img {
-	  	max-width: 100%;
-	  	height: auto;
+	  	max-height: 100%;
+	  	width: auto;
 	  }
 	  h2 {
 	  	font-size: 22px;
