--- a/app/views/mentions/index.html.haml
+++ b/app/views/mentions/index.html.haml
@@ -1,5 +1,5 @@
 #mentions.transitions-enabled
 	- @mention.each do |mention|
 		<!--.box.panel.panel-default-->
-		.box
+		.box.grayscale
 			= link_to (image_tag mention.image.url), mention
