--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,9 @@
 
 			  	<div class="form-inputs">
 			  		<div class="form-group">
+				    	<%= f.input :profile_name, required: true, autofocus: true, input_html: { class: 'form-control'} %>
+				    </div>
+			  		<div class="form-group">
 				    	<%= f.input :email, required: true, autofocus: true, input_html: { class: 'form-control'} %>
 				    </div>
 				    <div class="form-group">
