--- a/app/views/mentions/index.html.haml
+++ b/app/views/mentions/index.html.haml
@@ -2,4 +2,13 @@
 	- @mention.each do |mention|
 		<!--.box.panel.panel-default-->
 		.box.grayscale
-			= link_to (image_tag mention.image.url), mention
+			- if mention.user_id == 1
+				= link_to (image_tag mention.image.url), mention
+				%p.user= mention.user_id
+			- else
+				
+
+
+
+
+<!--<iframe src="http://localhost:3000/mentions/10" name="myiFrame" scrolling="no" width=100%; height=100%; frameborder="0"; style="border:0"; overflow= "hidden";></iframe>-->
